--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>Webpack example</title>
+    <meta charset="UTF-8">
+    <title>Webpack</title>
 </head>
 
 <body>
